# kdbx

./: .cz.toml  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  Makefile  README.md  install.sh  release.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: package.sh
.github/workflows/: audit.yml  bumpversion.yml  cd.yml  ci.yml  release.yml
src/: clipboard.rs  keepass.rs  keyring.rs  logger.rs  main.rs  pwd.rs  stdin.rs  utils.rs
src/commands/: add.rs  clip.rs  completion.rs  init.rs  list.rs  mod.rs  pwd.rs  show.rs  totp.rs
tests/: help.rs  list.rs  pwd.rs  show.rs  totp.rs
tests/files/: test.kdbx
