[package]
name = "kdbx"
version = "0.9.2"
authors = ["Danil Akhtarov <daxartio@gmail.com>"]
edition = "2021"
description = "A secure hole for your passwords (Keepass CLI)"
documentation = "https://github.com/daxartio/kdbx"
homepage = "https://github.com/daxartio/kdbx"
repository = "https://github.com/daxartio/kdbx"
readme = "README.md"
keywords = ["keepass", "kdbx4", "password", "kdbx"]
categories = ["command-line-utilities"]
license = "MIT"

[features]
default = ["clipboard"]
clipboard = ["dep:arboard"]

[dependencies]
arboard = { version = "3.4", default-features = false, optional = true }
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
ctrlc = { version = "3.4", features = ["termination"] }
env_logger = "0.11"
human-panic = "2.0"
keepass = { version = "0.7", features = ["save_kdbx4", "totp"]}
libc = "0.2"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_warn"] }
once_cell = "1.20"

[target.'cfg(not(windows))'.dependencies]
skim = "0.15"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
rstest = "0.23"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"
